--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jwtUtil</groupId>
-    <artifactId>jwt_customerId</artifactId>
-    <version>1.1.1</version>
+    <groupId>com.ftd-utils</groupId>
+    <artifactId>jwt_customerid</artifactId>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
 
     <name>jwt_customerId</name>
@@ -22,7 +22,7 @@
         <repository>
             <id>github</id>
             <name>GitHub william-alberto-diaz-rubiano Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/william-alberto-diaz-rubiano/jwt_customerId</url>
+            <url>https://maven.pkg.github.com/william-alberto-diaz-rubiano/jwt_customerid</url>
         </repository>
     </distributionManagement>
 
